Feature/user auth (#21)
* chore: ignore typescript >= 7.0 for dependabot (eslint incompatibility)

* feat: add scan diffing and historical trends

* feat: User Authentication (JWT)

* test: add auth tests for coverage

* fix: resolve backend lints

* fix: resolve backend lints properly

* fix: frontend lints and backend formatting

* chore: lower frontend coverage limits
